--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header class="header">
     <div class="logo"><span class="logo-a">A</span>C</div>
     <nav class="nav-buttons">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="education.html">Education</a>
         <a href="hobbies.html">Hobbies</a>
