--- a/hobbies.html
+++ b/hobbies.html
@@ -27,8 +27,8 @@
         Apart from my academic pursuits, I find joy and balance in different activities. I started swimming when I was 8 years old, and it has remained a significant part of my life. I also enjoy writing and drawing, which allow me to express my creativity and channel my ideas. These hobbies not only help me relax but also contribute to my overall well-being.
     </p>
     <div class="images-wrapper">
-        <img src="IMG_1848.jpg" alt="Swimming">
-        <img src="IMG_0926.jpg" alt="Writing and Drawing">
+        <img src="swimming.jpg" alt="Swimming">
+        <img src="drawing.jpg" alt="Writing and Drawing">
     </div>
 </div>
 
