--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 </header>
 <div class="container">
     <div class="slika">
-        <img src="IMG_6773.PNG" alt="Angela Cvetkovska">
+        <img src="profilna.PNG" alt="Angela Cvetkovska">
     </div>
     <h1>About Me</h1>
 
