--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="about.html" class="learn-more-btn">Learn More</a>
         </div>
         <div class="profilnaslika">
-            <img src="IMG_6773.PNG" alt="Angela Cvetkovska" width="300">
+            <img src="profilna.PNG" alt="Angela Cvetkovska" width="300">
         </div>
     </section>
 
