--- a/travels.html
+++ b/travels.html
@@ -21,13 +21,13 @@
     Over my time in high school and beyond, I've had the good fortune to travel to many fascinating places. Every trip I've taken has permanently altered my sense of wanderlust, inspiring a deep appreciation for diverse cultures and a lifelong passion for exploration.</p>
 <div class="image-container">
     <div class="sliki-travel">
-        <img src="IMG_1382.jpg" width="300" height="300" alt="Image 1">
+        <img src="travel1.JPG" width="300" height="300" alt="Image 1">
     </div>
     <div class="sliki-travel">
-        <img src="IMG_4222.jpg" height="300" width="300" alt="Image 2">
+        <img src="travel3.JPG" height="300" width="300" alt="Image 2">
     </div>
     <div class="sliki-travel">
-        <img src="IMG_6977.jpg" width="300" height="300" alt="Image 3">
+        <img src="travel2.JPG" width="300" height="300" alt="Image 3">
     </div>
 </div>
 
